# feature-doc

./: .dockerignore  Dockerfile  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_github_tokens.sql  0003_analyses.sql  0003_repositories.sql  0004_installation_repositories.sql
backend/src/: analysis.rs  audit.rs  auth.rs  config.rs  cookies.rs  crypto.rs  db.rs  error.rs  github.rs  github_api.rs  github_app.rs  github_tokens.rs  installations.rs  lib.rs  llm.rs  llmkey.rs  main.rs  mock_github.rs  models.rs  repositories.rs  session.rs  state.rs  users.rs  util.rs
backend/tests/: analyses.rs  api.rs  auth.rs  crypto.rs  github.rs  llmkey.rs  migrations.rs  repositories.rs  security.rs
backend/tests/common/: mod.rs
backend/tests/fixtures/: test_app_key.pem
deploy/: deployment.yaml  kind-cluster.yaml  service.yaml
deploy/e2e/: kustomization.yaml  mock-github.Dockerfile  mock-github.yaml
deploy/k8s/: .gitignore  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  secret.yaml.example  service.yaml
docs/: design-system.md  doc-tracker.md  glossary-tracker.md  glossary.md  values.md
docs/mockups/: README.md  s01-credentials-setup.html  s02-home-repositories.html  s03-connect-repository.html  s04-analysis-progress.html  s05-cross-cutting-concerns.html  s06-discovery-strategy.html  s07-feature-candidates.html  s08-feature-acceptance.html  s09-feature-dependencies.html  s10-llm-edit.html
docs/prd/: 01-analysis-pipeline.md  02-feature-representation.md  03-doc-management.md  04-platform.md
docs/test/: 01-analysis-pipeline.md  02-feature-representation.md  03-doc-management.md  04-platform.md
docs/user-journey/: 01-onboarding-and-connect.md  02-discovery.md  03-feature-documents.md  04-continuous-maintenance.md  README.md
docs/wireframes/: README.md
e2e/: package-lock.json  package.json  playwright.config.ts  smoke.sh
e2e/tests/: hello.spec.ts  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: e2e.sh
tools/: gen-wireframes.js
(+8 files in other folders)
